# c_type_shock

./: CMakeCache_old.txt  CMakeLists_old.txt  c_type_shock.sln  c_type_shock.vcxproj  c_type_shock.vcxproj.filters  input_parameters.txt  reactions_adsorp_desorption.txt  reactions_grain_mantle_sputt.txt  umist_analysis.txt
c_type_shock/: CMakeLists.txt  CMakeLists_old.txt  c_type_shock.cpp  chemical_reaction_data.cpp  chemical_reaction_data.h  chemistry.cpp  chemistry.h  coll_rates.cpp  coll_rates.h  coll_rates_ch3oh.cpp  coll_rates_co.cpp  coll_rates_co.h  coll_rates_h2.cpp  coll_rates_h2.h  coll_rates_h2o.cpp  coll_rates_ions.cpp  coll_rates_ions.h  coll_rates_nh3.cpp  coll_rates_nh3.h  coll_rates_oh.cpp  coll_rates_oh.h  differential_equations.cpp  differential_equations.h  dust_model.cpp  dust_model.h  elastic_scattering.cpp  elastic_scattering.h  lvg_method_functions.cpp  lvg_method_functions.h  parameters.h  radiation_field.cpp  radiation_field.h  reaction_rate_analyzer.cpp  reaction_rate_analyzer.h  special_functions.cpp  spectroscopy.cpp  spectroscopy.h  stdafx.cpp
output_data_1e4/dark_cloud_BEPent_B15A_DB035_QT_CR3-17/: out_screen.txt  sim_chem_heating.txt  sim_cloud_data.txt  sim_dust_data.txt  sim_heating_cooling.txt  sim_ice_comp.txt  sim_mhd_vode_data.txt  sim_phys_param.txt  sim_rad_transf.txt  sim_specimen_abund.txt
output_data_1e4/shock_25/: chemistry.txt  sim_data_ci.txt  sim_data_cii.txt  sim_data_co.txt  sim_data_h2.txt  sim_data_h2_chemistry.txt  sim_data_oh.txt  sim_data_oi.txt  sim_heating_cooling_int.txt  sim_phys_param.txt
output_data_1e4/shock_25_h2-h_lique-bossion/: checking.txt  destr_C+.txt  destr_C2H4.txt  destr_C2H5.txt  destr_C2H5OH.txt  destr_C2H5OH2+.txt  destr_C2O.txt  destr_CH2CO.txt  destr_CH2OH.txt  destr_CH3CHO.txt  destr_CH3CO.txt  destr_CH3O.txt  destr_CH3OCH2.txt  destr_CH3OCH3.txt  destr_CH3OCH4+.txt  destr_CH3OH.txt  destr_CH3OH2+.txt  destr_CO.txt  destr_CO2.txt  destr_H.txt  destr_H2.txt  destr_H2CO.txt  destr_H2O.txt  destr_H5C2O2+.txt  destr_HC2O.txt  destr_HCO.txt  destr_HCOOCH3.txt  destr_HCOOH.txt  destr_HCOOH2+.txt  destr_HNCO.txt  destr_JC2H4.txt  destr_JC2H5.txt  destr_JC2H5OH.txt  destr_JC2O.txt  destr_JCH2CO.txt  destr_JCH2OH.txt  destr_JCH3CHO.txt  destr_JCH3CO.txt  destr_JCH3O.txt  destr_JCH3OCH2.txt  (+101 more)
output_data_2e4/: sim_reactions.txt
output_data_2e4/dark_cloud/: chemistry.txt  dust_isfr_heat2_comp_model.txt  h2_spline.txt  sim_chem_heating.txt  sim_cloud_data.txt  sim_dust_data.txt  sim_heating_cooling.txt  sim_ice_comp.txt  sim_mhd_vode_data.txt  sim_phys_param.txt  sim_rad_transf.txt  sim_reaction_rates.txt  sim_reactions.txt  (+1 more)
output_data_2e5/: sim_reactions.txt
(+507 files in other folders)
